Terraform/Demo-Project/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

# TASK
# 1. Create a VPC
resource "aws_vpc" "fun-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "fun-vpc"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "fun-gw" {
  vpc_id = aws_vpc.fun-vpc.id

  tags = {
    Name = "fun-gw"
  }
}

# 3. Create a Custom Route Table
resource "aws_route_table" "rbt" {
  vpc_id = aws_vpc.fun-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.fun-gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.fun-gw.id
  }

  tags = {
    Name = "fun-rbt"
  }
}

# 4. Create a Subnet
resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.fun-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "subnet-1"
  }
}

# 5. Associate a Subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.rbt.id
}

# 6. Create a Security Group to allow ports 22(ssh),80(http),443(https)
resource "aws_security_group" "web_traffic" {
  name        = "allow_web_and_ssh"
  description = "Allow SSH, HTTP and HTTPS inbound traffic"
  vpc_id      = aws_vpc.fun-vpc.id # Ensure you have a VPC defined

  # 1. SSH Access (Port 22) 
  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # 2. HTTP Access (Port 80)
  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # 3. HTTPS Access (Port 443)
  ingress {
    description = "HTTPS from anywhere"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Egress: Allow all outbound traffic (so server can update)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # -1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web-Security-Group"
  }
}

# 7. Create a Network Interface with an IP in the subnet that was created in step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.web_traffic.id]

}

# 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "one" {
  domain                    = "vpc"
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.fun-gw]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip 
}

# 9. Create a Linux server install/enable apache2
resource "aws_instance" "web-server-instance" {
  ami               = "ami-07ff62358b87c7116"
  instance_type     = "t3.micro"
  availability_zone = "us-east-1a"
  key_name          = "demo-tf-key"

  primary_network_interface {
    network_interface_id = aws_network_interface.web-server-nic.id
  }

  user_data = <<-EOF
                #!/bin/bash
                yum update -y
                yum install -y httpd
                systemctl start httpd
                systemctl enable httpd
                echo "<h1>Hello World from Your EC2 instance!</h1>" > /var/www/html/index.html
                EOF 

  tags = {
    Name = "web-server"
  }
}

output "server_private_ip" {
  value = aws_instance.web-server-instance.private_ip
}

output "server_id" {
   value = aws_instance.web-server-instance.id
}
